// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#users.activate should activate a suspended user 1`] = `
Object {
  "data": Object {
    "avatarUrl": "https://tiley.herokuapp.com/avatar/111d68d06e2d317b5a59c2c6c5bad808/U.png",
    "createdAt": "2018-01-02T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": false,
    "isSuspended": false,
    "language": null,
    "lastActiveAt": null,
    "name": "User 1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#users.activate should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.delete should require authentication 1`] = `
Object {
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;

exports[`#users.demote should demote an admin 1`] = `
Object {
  "data": Object {
    "avatarUrl": "https://tiley.herokuapp.com/avatar/111d68d06e2d317b5a59c2c6c5bad808/U.png",
    "createdAt": "2018-01-02T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": false,
    "isSuspended": false,
    "language": null,
    "lastActiveAt": null,
    "name": "User 1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#users.demote should not demote admins if only one available 1`] = `
Object {
  "error": "validation_error",
  "message": "At least one admin is required",
  "ok": false,
  "status": 400,
}
`;

exports[`#users.demote should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.promote should promote a new admin 1`] = `
Object {
  "data": Object {
    "avatarUrl": "https://tiley.herokuapp.com/avatar/111d68d06e2d317b5a59c2c6c5bad808/U.png",
    "createdAt": "2018-01-02T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": true,
    "isSuspended": false,
    "language": null,
    "lastActiveAt": null,
    "name": "User 1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#users.promote should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.suspend should not allow suspending the user themselves 1`] = `
Object {
  "error": "validation_error",
  "message": "Unable to suspend the current user",
  "ok": false,
  "status": 400,
}
`;

exports[`#users.suspend should require admin 1`] = `
Object {
  "error": "admin_required",
  "message": "An admin role is required to access this resource",
  "ok": false,
  "status": 403,
}
`;

exports[`#users.suspend should suspend an user 1`] = `
Object {
  "data": Object {
    "avatarUrl": "https://tiley.herokuapp.com/avatar/111d68d06e2d317b5a59c2c6c5bad808/U.png",
    "createdAt": "2018-01-02T00:00:00.000Z",
    "email": "user1@example.com",
    "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
    "isAdmin": false,
    "isSuspended": true,
    "language": null,
    "lastActiveAt": null,
    "name": "User 1",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`#users.update should require authentication 1`] = `
Object {
  "error": "authentication_required",
  "message": "Authentication required",
  "ok": false,
  "status": 401,
}
`;
